@@ -1,3 +1,10 @@
+2013-12-30 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/hc08/ralloc2.cc,
+	  src/stm8/gen.c,
+	  src/stm8/ralloc2.cc:
+	  Remove some GETHBIT leftovers.
+
 2013-12-27 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/mcs51/gen.c (genGetHbit): removed
